# MinusResearch

./: .env.example  .gitignore  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
deep_research/: __init__.py  sdk.py
deep_research/agents/: __init__.py  extractor.py  pipeline.py
deep_research/api/: server.py
deep_research/cli/: main.py
deep_research/core/: config.py  llm.py
deep_research/graph/: reputation.py
deep_research/skill/: SKILL.md
deep_research/sources/: adapters.py  crawler.py
